Fixed text overflow in post-it preview

--- a/src/renderer/components/Gallery/SnapshotPreview.module.scss
+++ b/src/renderer/components/Gallery/SnapshotPreview.module.scss
@@ -58,6 +58,8 @@
         font-size: small;
         margin-left: 1rem;
         color: var(--postIt-text-color);
+        overflow: hidden;
+        text-overflow: ellipsis;
       }
 
       .intent {
